--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -33,6 +33,8 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#faq">Questions &amp; Answers</a></li>
                 <li><a href="https://github.com/adewes/gitboard">View on Github <i class="fa fa-github"></i></a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="app.html#/login"><strong>Login</strong></a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -79,7 +81,10 @@
                 </div>
                 <div class="col-md-6">
                     <h1>Keep track of your goals</h1>
-                    <p class="lead">Gitboard communicates directly with the Github API without using a third-party. You access credentials therefore stay on your computer. Gitboard does not store any user information or passwords in plaintext and will erase all data from your browser after you log out.</p>
+                    <p class="lead">Gitboard helps you to keep track of your goals and the time budget of your team. See aggregate time estimates and actual working time for each milestone. This helps you to discover problems in your project before the deadline hits you hard.</p>
+                    <p class="lead">
+                    <strong>Coming soon:</strong> Burndown charts. See if your progress keeps up with your schedule.
+                    </p>
                 </div>
             </div>
             <div class="row">
